--- a/deb/openmediavault/usr/share/openmediavault/locale/gl/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/gl/openmediavault.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+#  <mbouzada@gmail.com>, 2013.
 # Miguel Anxo Bouzada <mbouzada@gmail.com>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-28 08:40+0000\n"
+"PO-Revision-Date: 2013-03-03 12:32+0000\n"
 "Last-Translator: mbouzada <mbouzada@gmail.com>\n"
 "Language-Team: Galician (http://www.transifex.com/projects/p/openmediavault/language/gl/)\n"
 "MIME-Version: 1.0\n"
@@ -2009,7 +2010,7 @@ msgid "Online"
 msgstr "Conectado"
 
 msgid "Operation not allowed for user '%s'."
-msgstr ""
+msgstr "Operación non permitida para o usuario «%s»."
 
 msgid "Options"
 msgstr "Opcións"
@@ -2224,7 +2225,7 @@ msgid ""
 "want.</li><li>Idle - Check the device unless it is in SLEEP, STANDBY or IDLE"
 " mode. In the IDLE state, most disks are still spinning, so this is probably"
 " not what you want.</li></ul>"
-msgstr ""
+msgstr "Evitar que o disco xire cando sexa comprobado periodicamente.<br/><br/><ul><li>Nunca - Non revisar nunca o dispositivo independentemente do modo de enerxía seleccionado. Isto pode facer que o disco deixe de xirar e comece a xirar cando se comprobe.</li><li>Hibernar - Comproba o dispositivo a a non ser que estea no modo HIBERNAR.</li><li>Suspender - Comproba o dispositivo a non ser que estea no modo HIBERNAR ou SUSPENDER. Nestes modos a maioría dos discos non están xirando, así que se quere evitar que o disco xire en cada revisión, seguramente sexa iso o que ten que axustar.</li><li>Desocupado - Comproba o dispositivo a a non ser que estea no modo HIBERNAR, SUSPENDER ou DESOCUPADO, no caso DESOCUPADO a maioría dos discos están xirando, así que probablemente no sexa isto o que quere.</li></ul>"
 
 msgid "Primary"
 msgstr "Pricipal"
@@ -2977,7 +2978,7 @@ msgid ""
 " mask and directory mask but the inherit permissions parameter overrides "
 "this. This can be particularly useful on systems with many users to allow a "
 "single share to be used flexibly by each user."
-msgstr ""
+msgstr "Os permisos de ficheiros e directorios novos son gobernados pola creación da máscara e a máscara de directorio, mais o parámetro herdar permisos anula isto. Isto pode ser particularmente útil en sistemas con moitos usuarios para permitir usar unha soa acción flexíbel para cada usuario."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
@@ -2989,7 +2990,7 @@ msgstr "O nome do servizo."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
-msgstr ""
+msgstr "O tempo de espera de sesión en minutos. Estabelézao en 0 para desactivar a desconexión automática."
 
 msgid "The shared folder is already used by another share"
 msgstr "O cartafol compartido está a ser usado por outro recurso compartido."
@@ -3040,7 +3041,7 @@ msgstr "Xa existe un punto de montaxe para %s"
 msgid ""
 "These settings are used by the services to configure the user access rights."
 " Please note that these settings do no affect the file system permissions."
-msgstr ""
+msgstr "Estes parámetros son utilizados polos servizos para configurar os dereitos de acceso do usuario. Teña en conta que estes axustes non afectan aos permisos do sistema de ficheiros."
 
 msgid ""
 "This controls whether this share is seen in the list of available shares in "
@@ -3110,7 +3111,7 @@ msgid ""
 "This may make more efficient use of the system CPU's and cause Samba to be "
 "faster. Samba automatically turns this off for clients that use protocol "
 "levels lower than NT LM 0.12 and when it detects a client is Windows 9x."
-msgstr ""
+msgstr "Isto pode resultar nun uso máis eficiente da CPU do sistema e levar a que Samba sexa máis rápido. Samba devolve esta opción automaticamente para os clientes que utilizan niveles de protocolo por baixo do NT LM 0.12 e cando detecta que un cliente é Windows 9x."
 
 msgid ""
 "This option causes the server to not send a certificate request during a SSL"
@@ -3129,7 +3130,7 @@ msgid ""
 "use the keyword ALL (or the netmask 0.0.0.0/0) and then explicitly specify "
 "to the hosts allow parameter those hosts that should be permitted access. "
 "Leave this field empty to use default settings."
-msgstr ""
+msgstr "Esta opción é un conxunto de máquinas/servidores, delimitados por unha coma, un espazo ou unha tabulación, que NON teñen permiso para acceder a este módulo. Cando hai conflito entre listas, a lista de permisos ten prioridade. No caso de que sexa necesario denegar todo de forma predeterminada, utilice a palabra chave «ALL» (ou a máscara de rede 0.0.0.0/0) e de seguido especifique de forma explícita os parámetros permitidos ás maquinas/servidores ás que se lles debe permitir o acceso. Deixe este campo en baleiro para utilizar a configuración predeterminada."
 
 msgid ""
 "This option is a comma, space, or tab delimited set of host which are NOT "
@@ -3138,7 +3139,7 @@ msgid ""
 "use the keyword ALL (or the netmask 0.0.0.0/0) and then explicitly specify "
 "to the hosts allow parameter those hosts that should be permitted access. "
 "Leave this field empty to use default settings."
-msgstr ""
+msgstr "Esta opción é un conxunto de máquinas/servidores, delimitados por unha coma, un espazo ou unha tabulación, que NON teñen permiso para acceder a este recurso compartido. Cando hai conflito entre listas, a lista de permisos ten prioridade. No caso de que sexa necesario denegar todo de forma predeterminada, utilice a palabra chave «ALL» (ou a máscara de rede 0.0.0.0/0) e de seguido especifique de forma explícita os parámetros permitidos ás maquinas/servidores ás que se lles debe permitir o acceso. Deixe este campo en baleiro para utilizar a configuración predeterminada."
 
 msgid ""
 "This option is a comma, space, or tab delimited set of hosts which are "
@@ -3160,7 +3161,7 @@ msgstr "Esta opción require que os clientes utilicen FTP sobre TLS cando se com
 msgid ""
 "This option specifies the group name that file transfers to and from that "
 "module should take place."
-msgstr ""
+msgstr "Esta opción especifica o nome do grupo que se debe empregar para realizar transferencias de ficheiros cara e desde ese módulo."
 
 msgid ""
 "This option specifies the maximum number of simultaneous connections. 0 "
@@ -3170,18 +3171,18 @@ msgstr "Esta opción especifica o número máximo de conexións simultáneas. 0 
 msgid ""
 "This option specifies the user name that file transfers to and from that "
 "module should take place."
-msgstr ""
+msgstr "Esta opción especifica o nome do usuario que se debe empregar para realizar transferencias de ficheiros cara e desde ese módulo."
 
 msgid ""
 "This option will handle all connections as if they are SSL connections "
 "implicitly."
-msgstr ""
+msgstr "Esta opción controlará todas as conexións como se forma implícita fosen SSL."
 
 msgid ""
 "This parameter can be used to ensure that if default acls exist on parent "
 "directories, they are always honored when creating a new file or "
 "subdirectory in these parent directories."
-msgstr ""
+msgstr "Este parámetro pode utilizarse para asegurar que se existen ACL predeterminadas nos directorios pai, sempre se respectan ao crear un novo ficheiro ou subdirectorio nestes directorios principais."
 
 msgid ""
 "This parameter controls whether files starting with a dot appear as hidden "
