--- a/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pl_PL/openmediavault.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-26 10:16+0000\n"
+"PO-Revision-Date: 2013-03-04 10:42+0000\n"
 "Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
@@ -3204,7 +3204,7 @@ msgid "This will create a recycle bin on the share."
 msgstr "Spowoduje to utworzenie Kosza w udziale."
 
 msgid "Thursday"
-msgstr "Wtorek"
+msgstr "Czwartek"
 
 msgid "TiB"
 msgstr "TiB"
