--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-usbbackup (0.4.5) stable; urgency=low
+
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 04 Mar 2013 19:41:26 +0100
+
 openmediavault-usbbackup (0.4.4) stable; urgency=low
 
   * Unmount USB device after synchronisation has been finished.
