--- a/deb/openmediavault-netatalk/usr/share/openmediavault/locale/pl_PL/openmediavault-netatalk.po
+++ b/deb/openmediavault-netatalk/usr/share/openmediavault/locale/pl_PL/openmediavault-netatalk.po
@@ -4,14 +4,15 @@
 # 
 # Translators:
 # Cyryl Sochacki <>, 2012.
+# Cyryl Sochacki <cyrylsochacki@gmail.com>, 2013.
 # Jacek Niedziółka <>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-02-10 00:15+0100\n"
-"PO-Revision-Date: 2013-02-09 23:15+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2013-02-24 23:10+0000\n"
+"Last-Translator: Cyryl Sochacki <cyrylsochacki@gmail.com>\n"
 "Language-Team: Polish (Poland) (http://www.transifex.com/projects/p/openmediavault/language/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,22 +21,22 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgid " "
-msgstr ""
+msgstr " "
 
 msgid "Add share"
 msgstr "Dodaj udział"
 
 msgid "Advanced settings"
-msgstr ""
+msgstr "Zaawansowana konfiguracja"
 
 msgid "Advertise this service via mDNS/DNS-SD."
 msgstr "Anonsowanie tej usługi za pośrednictwem mDNS/DNS-SD."
 
 msgid "Allow guest login."
-msgstr ""
+msgstr "Pozwól na dostęp gościom"
 
 msgid "Allow guests to create or modify files."
-msgstr ""
+msgstr "Pozwól gościom na edycje i tworzenie plików."
 
 msgid "Allow logins with passwords transmitted in the clear."
 msgstr "Pozwól na  logowanie z hasłem przesyłanym w formie nieszyfrowanej."
@@ -86,10 +87,10 @@ msgid "General settings"
 msgstr "Ustawienia"
 
 msgid "Guest login"
-msgstr ""
+msgstr "Login gościa"
 
 msgid "Guests only have read access by default."
-msgstr ""
+msgstr "Goście mają prawo tylko do odczytu - domyślnie."
 
 msgid "Hide dot files"
 msgstr "Ukryj pliki dot"
