--- a/deb/openmediavault-ldap/debian/changelog
+++ b/deb/openmediavault-ldap/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-ldap (0.4.3) stable; urgency=low
+
+  * Update locales.
+  * Validate entered host value.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 08 Mar 2013 17:51:42 +0100
+
 openmediavault-ldap (0.4.2) stable; urgency=low
 
   * Regenerate configurations during plugin deinstallation.
