--- a/deb/openmediavault-ldap/usr/share/openmediavault/locale/de_DE/openmediavault-ldap.po
+++ b/deb/openmediavault-ldap/usr/share/openmediavault/locale/de_DE/openmediavault-ldap.po
@@ -4,14 +4,15 @@
 # 
 # Translators:
 #   <bejonwe@gmx.net>, 2012.
+# Volker <votdev@gmx.de>, 2013.
 # Volker  <votdev@gmx.de>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-19 16:20+0200\n"
-"PO-Revision-Date: 2012-11-21 15:37+0000\n"
-"Last-Translator: bejonwe <bejonwe@gmx.net>\n"
+"PO-Revision-Date: 2013-03-07 10:14+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -47,7 +48,7 @@ msgid "Password"
 msgstr "Passwort"
 
 msgid "Root Bind DN"
-msgstr ""
+msgstr "Root Bind DN"
 
 msgid ""
 "Specifies the base distinguished name (DN) to use as search base, e.g. "
