--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-netatalk (0.4.7) stable; urgency=low
+
+  * Update locales.
+  * Fix bug in config script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 08 Mar 2013 23:48:42 +0100
+
 openmediavault-netatalk (0.4.6) stable; urgency=low
 
   * Update locales.
