--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,13 @@
+openmediavault-usbbackup (0.4.6) stable; urgency=low
+
+  * Update locales.
+  * Display if job is running in the job list (column 'Running').
+  * Add ability to backup from external to shared folder and vice verse.
+  * !!! Attention !!! Now only the shared folder content is syncronized
+    to the external storage.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 12 Mar 2013 11:52:31 +0100
+
 openmediavault-usbbackup (0.4.5) stable; urgency=low
 
   * Update locales.
