--- a/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/tr_TR/openmediavault.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-02-01 19:27+0100\n"
-"PO-Revision-Date: 2013-02-01 18:28+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"POT-Creation-Date: 2013-03-14 02:55+0100\n"
+"PO-Revision-Date: 2013-03-16 23:10+0000\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/projects/p/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1432,6 +1432,9 @@ msgid ""
 "example, 49152-65534, the IANA-registered ephemeral port range)."
 msgstr "Bazı durumlarda güvenlik duvarını devre dışı bırakabilmek için pasif port aralığı tanımlamak zorunda kalırsınız. Pasif portlar kullanıcı tarafından PASV komutu geldiğinde sunucunun seçebileceği port aralığını sınırlar. Sunucu belirlenmiş aralıktan açık bir port bulana kadar rastgele port numaraları dener. Port aralığı mutlaka özelleştirilmemiş bir aralıktan (örn. 1024 ya da daha büyük) seçilmelidir. Seçilen aralığın olabilecek en fazla sayıdaki pasif bağlantıyı karşılayabilecek kadar geniş olarak ayarlanması şiddetle önerilir (örneğin, IANA - kayıtlı geçici port aralığı olan 49152-65534 şeklinde)."
 
+msgid "Incorrect username or password."
+msgstr "Geçersiz kullanıcı adı ya da şifresi."
+
 msgid "India"
 msgstr "Hindistan"
 
@@ -1467,9 +1470,6 @@ msgstr "Kuruldu"
 
 msgid "Interfaces"
 msgstr "Arabirim"
-
-msgid "Invalid comment"
-msgstr "Geçersiz açıklama"
 
 msgid "Invalid domain name"
 msgstr "Geçersiz alan adı"
@@ -2009,7 +2009,7 @@ msgid "Online"
 msgstr "Çalışır"
 
 msgid "Operation not allowed for user '%s'."
-msgstr ""
+msgstr "'%s' kullanıcısı bu işlemi yapamaz."
 
 msgid "Options"
 msgstr "Seçenekler"
@@ -2919,6 +2919,9 @@ msgstr "Değişiklikler uygulandı"
 msgid "The changes have been applied successfully."
 msgstr "Değişiklikler başarılı bir şekilde uygulandı."
 
+msgid "The comment contains invalid characters"
+msgstr "Açıklama geçersiz karakter içermektedir"
+
 msgid "The default SMTP mail server port, e.g. 25 or 587."
 msgstr "Varsayılan SMTP posta sunucusu portu, örn. 25 veya 587."
 
@@ -2989,7 +2992,7 @@ msgstr "Servis adı."
 
 msgid ""
 "The session timeout time in minutes. Set to 0 to disable automatic logout."
-msgstr ""
+msgstr "Dakika olarak oturum sonlandırma süresi. Otomatik çıkışı iptal etmek için değeri 0 olarak ayarlayınız."
 
 msgid "The shared folder is already used by another share"
 msgstr "Bu paylaşılmış klasör zaten başka bir paylaşımda kullanılıyor"
